# researchgraph

./: .aider.chat.history.md  .aider.input.history  .bumpversion.cfg  .env_sample  .gitignore  404.html  Adam.py  Adam_metho_text  LICENSE  Makefile  README.md  index.html  noxfile.py  pyproject.toml  requirements.txt  sitemap.xml
.aider.tags.cache.v3/: cache.db
.cursor/: mcp.json
.devcontainer/: dev-gpu.Dockerfile  dev.Dockerfile  devcontainer.json  docker-compose.yaml  docker.sh
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: keepalive.yml  nox_python_version_test.yml  prepare_release.yml  publish_python_packages.yml  publish_to_pypi.yml  publish_to_test_pypi.yml  pytest-nodes.yml  pytest-subgraphs.yml  pytest.yml  pytest_all.yml  pytest_analytic_subgraph.yml  pytest_create_experimental_design_subgraph.yml  pytest_create_method_subgraph.yml  pytest_executor_subgraph.yml  pytest_experimental_plan_subgraph.yml  pytest_generator_subgraph.yml  pytest_html_subgraph.yml  pytest_intergrate_generator_subgraph.yml  pytest_latex_subgraph.yml  pytest_prepare_repository_subgraph.yml  pytest_readme_subgraph.yml  pytest_refine_generator_subgraph.yml  pytest_retrieve_code_subgraph.yml  pytest_retrieve_paper_subgraph.yml  pytest_retrive_paper_subgraph.yml  pytest_writer_subgraph.yml  python-publish.yml  release_drafter.yml  setup-environment.yml  test.yaml  test.yml  test_readme_subgraph.yml  test_research_preparation_subgraph.yml  update_version.yml  upload_github_pages.yml
assets/js/: 01a85c17.ba7daae7.js  04e80a49.43bc270f.js  052f5ed8.d1b88ed0.js  0e384e19.0a707fe3.js  0e384e19.106988b7.js  0e384e19.7d502648.js  0e384e19.ea697b35.js  0f4dedcb.453e8c65.js  0f4dedcb.4ff34ea2.js  14eb3368.b93a9a2d.js  17896441.48533033.js  17896441.fd343dfb.js  18c41134.3b9084fc.js  18c41134.5c83ffe6.js  18c41134.80740255.js  18c41134.9a7dd578.js  18c41134.a71b5459.js  1a18a058.6f502299.js  1af2b7e0.35712961.js  1af2b7e0.9f5757b6.js  1af2b7e0.c9e1101b.js  1df93b7f.10c9ad4a.js  1df93b7f.71ef8504.js  1e4232ab.2661e695.js  1e4232ab.d77b6fa9.js  1e4232ab.ec58c0b9.js  1e4232ab.f086b370.js  1f391b9e.40a83c6c.js  1f391b9e.e5d3688a.js  1f391b9e.e5eb7eab.js  2cac8d42.2a6c6aec.js  2cac8d42.ba605a12.js  2cac8d42.fdc625b7.js  3042.c46c6bc5.js  33fc5bb8.fdcc920b.js  3640b643.017f66a9.js  3640b643.738827e7.js  392.ef34b7d1.js  393be207.37f482e5.js  393be207.46a4e5c8.js  (+127 more)
blog/: atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/authors/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
config/: config.yaml
data/: gsm8k_answer.csv
docs/: README_ja.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
examples/: ai_integrator_v1.ipynb  ai_integrator_v2.ipynb  build_graph.ipynb  execute_graph.ipynb  researchchain_demo.ipynb  researchchain_sample.ipynb  researchgraph_demo.ipynb  researchgraph_sample.ipynb
ja/: 404.html  index.html  sitemap.xml
markdown-page/: index.html
notebook/: research_graph.ipynb  sample.ipynb  sample_jp.ipynb
researchchain/: main.py  test.py
researchgraph/: test.py
src/: evaluate.py  main.py  preprocess.py  train.py
test/: test_ai_scientist.py  test_codingnodes.py  test_experimentnodes.py  test_latexnode.py  test_llmnodes.py  test_llmsfttrain_node.py  test_openalex.py  test_path_resolver.py  test_retrievenodes.py  test_semantic_scholar.py  test_text2scriptnode.py  test_writingnode.py
tests/: conftest.py  test_cache.py  test_logging.py  test_nodes.py  test_parallel.py
(+1015 files in other folders)
