[project]
name = "researchgraph"
version = "0.0.69"
description = "Add your description here"
readme = "README.md"
authors = [
    {name="Toma Tanaka", email="ulti4929@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "aider-chat>=0.62.1",
    "arxiv==2.1.3",
    "langchain-community>=0.2.15",
    "langchain>=0.2.15",
    "langgraph>=0.2.23",
    "llmlinks==0.1.34",
    "openai>=1.35.13",
    "pandas>=2.2.3",
    "pyalex>=0.15.1",
    "pydantic>=2.9.2",
    "pypdf>=4.3.1",
    "semanticscholar>=0.8.4",
    "tomli-w>=1.0.0",
    "tomli>=2.0.1",
    "jinja2>=3.1.4",
    "litellm>=1.52.16",
    "setuptools>=75.6.0",
]

[project.urls]
Homepage = "https://www.autores.one/english"
Issues = "https://github.com/auto-res/researchgraph/issues"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
    "setuptools>=75.6.0",
    "twine>=6.0.1",
]

[tool.ruff.lint]
ignore = ["E731","E741","F841","F821"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["researchgraph*"]
