[project]
name = "airas"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    {name="Toma Tanaka", email="ulti4929@gmail.com"}
]
requires-python = ">=3.10"
dependencies = [
    "arxiv==2.1.3",
    "langchain-community>=0.2.15",
    "langchain>=0.2.15",
    "langgraph>=0.2.23",
    "openai>=1.35.13",
    "pandas>=2.2.3",
    "pyalex>=0.15.1",
    "pydantic>=2.9.2",
    "pypdf>=4.3.1",
    "semanticscholar>=0.8.4",
    "tomli-w>=1.0.0",
    "tomli>=2.0.1",
    "jinja2>=3.1.4",
    "pytest-cov>=6.0.0",
    "tiktoken>=0.9.0",
    "google-genai>=1.9.0",
]

[project.urls]
Homepage = "https://www.autores.one/english"
Issues = "https://github.com/auto-res/airas/issues"

[project.optional-dependencies]
mcp = [
    "asyncio>=3.4.3",
    "mcp[cli]>=1.6.0",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "mypy>=1.15.0",
    "pre-commit>=3.8.0",
    "pytest>=8.3.3",
]

[tool.ruff.lint]
ignore = ["E731","E741","F841","F821"]
